--- a/public/themes/bootstrap4-light-purple/theme.css
+++ b/public/themes/bootstrap4-light-purple/theme.css
@@ -1676,12 +1676,6 @@
 .p-togglebutton.p-button .p-button-icon-right {
   color: #ffffff;
 }
-.p-togglebutton.p-button:not(.p-disabled).p-focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: 0 0 0 0.2rem rgba(136, 60, 174, 0.5);
-  border-color: #883cae;
-}
 .p-togglebutton.p-button:not(.p-disabled):not(.p-highlight):hover {
   background: #5a6268;
   border-color: #545b62;
@@ -4660,6 +4654,14 @@
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem rgba(136, 60, 174, 0.5);
 }
+.p-menu .p-menuitem-link:focus {
+  outline: none;
+  box-shadow: none;
+}
+.p-menu .p-menuitem-link.p-focus {
+  color: #212529;
+  background: #dee2e6;
+}
 .p-menu.p-menu-overlay {
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.15);
@@ -5162,6 +5164,24 @@
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem rgba(136, 60, 174, 0.5);
+}
+.p-tieredmenu .p-menuitem-link:focus {
+  outline: none;
+  box-shadow: none;
+}
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) {
+  background: #883cae;
+}
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-text,
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-icon {
+  color: #ffffff;
+}
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled).p-focus {
+  background: #703290;
+}
+.p-tieredmenu .p-menuitem-link:not(.p-highlight):not(.p-disabled).p-focus {
+  color: #212529;
+  background: #dee2e6;
 }
 .p-tieredmenu.p-tieredmenu-overlay {
   background: #ffffff;
