--- a/public/themes/luna-amber/theme.css
+++ b/public/themes/luna-amber/theme.css
@@ -1676,12 +1676,6 @@
 .p-togglebutton.p-button .p-button-icon-right {
   color: #888888;
 }
-.p-togglebutton.p-button:not(.p-disabled).p-focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: 0 0 0 0.1rem white;
-  border-color: #FFE082;
-}
 .p-togglebutton.p-button:not(.p-disabled):not(.p-highlight):hover {
   background: #4c4c4c;
   border-color: #4c4c4c;
@@ -4635,6 +4629,14 @@
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem white;
 }
+.p-menu .p-menuitem-link:focus {
+  outline: none;
+  box-shadow: none;
+}
+.p-menu .p-menuitem-link.p-focus {
+  color: #dedede;
+  background: #3c3c3c;
+}
 .p-menu.p-menu-overlay {
   background: #252525;
   border: 1px solid #191919;
@@ -5113,6 +5115,24 @@
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem white;
+}
+.p-tieredmenu .p-menuitem-link:focus {
+  outline: none;
+  box-shadow: none;
+}
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) {
+  background: #FFE082;
+}
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-text,
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-icon {
+  color: #212529;
+}
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled).p-focus {
+  background: #ffe081;
+}
+.p-tieredmenu .p-menuitem-link:not(.p-highlight):not(.p-disabled).p-focus {
+  color: #dedede;
+  background: #3c3c3c;
 }
 .p-tieredmenu.p-tieredmenu-overlay {
   background: #252525;
