--- a/public/themes/nova-vue/theme.css
+++ b/public/themes/nova-vue/theme.css
@@ -1676,12 +1676,6 @@
 .p-togglebutton.p-button .p-button-icon-right {
   color: #666666;
 }
-.p-togglebutton.p-button:not(.p-disabled).p-focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: 0 0 0 0.2rem #c2e9d8;
-  border-color: #41b883;
-}
 .p-togglebutton.p-button:not(.p-disabled):not(.p-highlight):hover {
   background: #c8c8c8;
   border-color: #c8c8c8;
@@ -4635,6 +4629,14 @@
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem #c2e9d8;
 }
+.p-menu .p-menuitem-link:focus {
+  outline: none;
+  box-shadow: none;
+}
+.p-menu .p-menuitem-link.p-focus {
+  color: #333333;
+  background: #d6d6d6;
+}
 .p-menu.p-menu-overlay {
   background: #ffffff;
   border: 1px solid #c8c8c8;
@@ -5113,6 +5115,24 @@
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem #c2e9d8;
+}
+.p-tieredmenu .p-menuitem-link:focus {
+  outline: none;
+  box-shadow: none;
+}
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) {
+  background: #41b883;
+}
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-text,
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-icon {
+  color: #ffffff;
+}
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled).p-focus {
+  background: #41b883;
+}
+.p-tieredmenu .p-menuitem-link:not(.p-highlight):not(.p-disabled).p-focus {
+  color: #333333;
+  background: #d6d6d6;
 }
 .p-tieredmenu.p-tieredmenu-overlay {
   background: #ffffff;
