--- a/public/themes/saga-purple/theme.css
+++ b/public/themes/saga-purple/theme.css
@@ -1664,12 +1664,6 @@
 .p-togglebutton.p-button .p-button-icon-right {
   color: #6c757d;
 }
-.p-togglebutton.p-button:not(.p-disabled).p-focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: 0 0 0 0.2rem #df9eea;
-  border-color: #9C27B0;
-}
 .p-togglebutton.p-button:not(.p-disabled):not(.p-highlight):hover {
   background: #e9ecef;
   border-color: #ced4da;
@@ -4648,6 +4642,14 @@
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem #df9eea;
 }
+.p-menu .p-menuitem-link:focus {
+  outline: none;
+  box-shadow: none;
+}
+.p-menu .p-menuitem-link.p-focus {
+  color: #495057;
+  background: #dee2e6;
+}
 .p-menu.p-menu-overlay {
   background: #ffffff;
   border: 0 none;
@@ -5150,6 +5152,24 @@
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem #df9eea;
+}
+.p-tieredmenu .p-menuitem-link:focus {
+  outline: none;
+  box-shadow: none;
+}
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) {
+  background: #F3E5F5;
+}
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-text,
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-icon {
+  color: #495057;
+}
+.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled).p-focus {
+  background: rgba(156, 39, 176, 0.24);
+}
+.p-tieredmenu .p-menuitem-link:not(.p-highlight):not(.p-disabled).p-focus {
+  color: #495057;
+  background: #dee2e6;
 }
 .p-tieredmenu.p-tieredmenu-overlay {
   background: #ffffff;
