--- a/public/themes/luna-blue/theme.css
+++ b/public/themes/luna-blue/theme.css
@@ -1676,6 +1676,12 @@
 .p-togglebutton.p-button .p-button-icon-right {
   color: #888888;
 }
+.p-togglebutton.p-button:not(.p-disabled).p-focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: 0 0 0 0.1rem white;
+  border-color: #81D4FA;
+}
 .p-togglebutton.p-button:not(.p-disabled):not(.p-highlight):hover {
   background: #4c4c4c;
   border-color: #4c4c4c;
@@ -4370,9 +4376,9 @@
   color: #dedede;
 }
 .p-contextmenu .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem white;
+  color: #dedede;
+  background: #3c3c3c;
+  outline: none;
 }
 .p-contextmenu .p-submenu-list {
   padding: 0;
@@ -4404,20 +4410,12 @@
   padding: 0.5rem 0.5rem;
   border-radius: 0.5rem;
 }
-.p-dock .p-dock-list-container .p-dock-list {
-  outline: none;
-}
 .p-dock .p-dock-item {
   padding: 0.5rem;
 }
 .p-dock .p-dock-action {
   width: 4rem;
   height: 4rem;
-}
-.p-dock .p-dock-action.p-focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem white;
 }
 .p-dock.p-dock-top .p-dock-item-second-prev,
 .p-dock.p-dock-top .p-dock-item-second-next, .p-dock.p-dock-bottom .p-dock-item-second-prev,
@@ -4504,9 +4502,9 @@
   color: #dedede;
 }
 .p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem white;
+  color: #dedede;
+  background: #3c3c3c;
+  outline: none;
 }
 .p-megamenu .p-megamenu-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link,
 .p-megamenu .p-megamenu-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link:not(.p-disabled):hover {
@@ -4554,9 +4552,9 @@
   color: #dedede;
 }
 .p-megamenu .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem white;
+  color: #dedede;
+  background: #3c3c3c;
+  outline: none;
 }
 .p-megamenu .p-megamenu-panel {
   background: #252525;
@@ -4633,9 +4631,13 @@
   color: #dedede;
 }
 .p-menu .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem white;
+  color: #dedede;
+  background: #3c3c3c;
+  outline: none;
+}
+.p-menu .p-menuitem-link.p-focus {
+  color: #dedede;
+  background: #3c3c3c;
 }
 .p-menu.p-menu-overlay {
   background: #252525;
@@ -4693,9 +4695,9 @@
   color: #dedede;
 }
 .p-menubar .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem white;
+  color: #dedede;
+  background: #3c3c3c;
+  outline: none;
 }
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link {
   padding: 0.857rem;
@@ -4728,9 +4730,9 @@
   color: #dedede;
 }
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem white;
+  color: #dedede;
+  background: #3c3c3c;
+  outline: none;
 }
 .p-menubar .p-menubar-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link,
 .p-menubar .p-menubar-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link:not(.p-disabled):hover {
@@ -4843,9 +4845,9 @@
     color: #dedede;
   }
   .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link:focus {
-    outline: 0 none;
-    outline-offset: 0;
-    box-shadow: inset 0 0 0 0.15rem white;
+    color: #dedede;
+    background: #3c3c3c;
+    outline: none;
   }
   .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link > .p-submenu-icon {
     margin-left: auto;
@@ -4975,9 +4977,9 @@
   color: #dedede;
 }
 .p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem white;
+  color: #dedede;
+  background: #3c3c3c;
+  outline: none;
 }
 .p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-link .p-panelmenu-icon {
   margin-right: 0.5rem;
@@ -5082,44 +5084,13 @@
   border-radius: 3px;
   width: 12.5rem;
 }
-.p-tieredmenu .p-menuitem-link {
-  padding: 0.857rem;
-  color: #dedede;
-  border-radius: 0;
-  transition: background-color 0.2s, border-color 0.2s, box-shadow 0.2s;
-  user-select: none;
-}
-.p-tieredmenu .p-menuitem-link .p-menuitem-text {
-  color: #dedede;
-}
-.p-tieredmenu .p-menuitem-link .p-menuitem-icon {
-  color: #dedede;
-  margin-right: 0.5rem;
-}
-.p-tieredmenu .p-menuitem-link .p-submenu-icon {
-  color: #dedede;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-disabled):hover {
-  background: #4c4c4c;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-disabled):hover .p-menuitem-text {
-  color: #dedede;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-disabled):hover .p-menuitem-icon {
-  color: #dedede;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-disabled):hover .p-submenu-icon {
-  color: #dedede;
-}
-.p-tieredmenu .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem white;
-}
 .p-tieredmenu.p-tieredmenu-overlay {
   background: #252525;
   border: 1px solid #191919;
   box-shadow: 0 0px 6px 0 rgba(0, 0, 0, 0.16);
+}
+.p-tieredmenu .p-tieredmenu-root-submenu {
+  outline: 0 none;
 }
 .p-tieredmenu .p-submenu-list {
   padding: 0;
@@ -5127,14 +5098,70 @@
   border: 1px solid #191919;
   box-shadow: 0 0px 6px 0 rgba(0, 0, 0, 0.16);
 }
-.p-tieredmenu .p-menuitem.p-menuitem-active > .p-menuitem-link {
+.p-tieredmenu .p-menuitem .p-menuitem-content {
+  color: #dedede;
+  transition: background-color 0.2s, border-color 0.2s, box-shadow 0.2s;
+}
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link,
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action {
+  padding: 0.857rem;
+  border-radius: 0;
+  user-select: none;
+}
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action .p-menuitem-text {
+  color: #dedede;
+}
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link .p-menuitem-icon,
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action .p-menuitem-icon {
+  color: #dedede;
+  margin-right: 0.5rem;
+}
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action .p-submenu-icon {
+  color: #dedede;
+}
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content {
+  color: #212529;
   background: #81D4FA;
 }
-.p-tieredmenu .p-menuitem.p-menuitem-active > .p-menuitem-link .p-menuitem-text {
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-action .p-menuitem-text {
   color: #212529;
 }
-.p-tieredmenu .p-menuitem.p-menuitem-active > .p-menuitem-link .p-menuitem-icon, .p-tieredmenu .p-menuitem.p-menuitem-active > .p-menuitem-link .p-submenu-icon {
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-link .p-menuitem-icon, .p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-action .p-menuitem-icon,
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-action .p-submenu-icon {
   color: #212529;
+}
+.p-tieredmenu .p-menuitem.p-highlight.p-focus > .p-menuitem-content {
+  background: #81D4FA;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content {
+  color: #dedede;
+  background: #3c3c3c;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-action .p-menuitem-text {
+  color: #dedede;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-menuitem-icon, .p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-action .p-menuitem-icon,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-action .p-submenu-icon {
+  color: #dedede;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content {
+  color: #dedede;
+  background: #4c4c4c;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-action .p-menuitem-text {
+  color: #dedede;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-link .p-menuitem-icon, .p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-action .p-menuitem-icon,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-action .p-submenu-icon {
+  color: #dedede;
 }
 .p-tieredmenu .p-menu-separator {
   border-top: 1px solid #4b4b4b;
