--- a/public/themes/saga-purple/theme.css
+++ b/public/themes/saga-purple/theme.css
@@ -1664,6 +1664,12 @@
 .p-togglebutton.p-button .p-button-icon-right {
   color: #6c757d;
 }
+.p-togglebutton.p-button:not(.p-disabled).p-focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: 0 0 0 0.2rem #df9eea;
+  border-color: #9C27B0;
+}
 .p-togglebutton.p-button:not(.p-disabled):not(.p-highlight):hover {
   background: #e9ecef;
   border-color: #ced4da;
@@ -4383,9 +4389,9 @@
   color: #6c757d;
 }
 .p-contextmenu .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #df9eea;
+  color: #495057;
+  background: #dee2e6;
+  outline: none;
 }
 .p-contextmenu .p-submenu-list {
   padding: 0.25rem 0;
@@ -4417,20 +4423,12 @@
   padding: 0.5rem 0.5rem;
   border-radius: 0.5rem;
 }
-.p-dock .p-dock-list-container .p-dock-list {
-  outline: none;
-}
 .p-dock .p-dock-item {
   padding: 0.5rem;
 }
 .p-dock .p-dock-action {
   width: 4rem;
   height: 4rem;
-}
-.p-dock .p-dock-action.p-focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #df9eea;
 }
 .p-dock.p-dock-top .p-dock-item-second-prev,
 .p-dock.p-dock-top .p-dock-item-second-next, .p-dock.p-dock-bottom .p-dock-item-second-prev,
@@ -4517,9 +4515,9 @@
   color: #6c757d;
 }
 .p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #df9eea;
+  color: #495057;
+  background: #dee2e6;
+  outline: none;
 }
 .p-megamenu .p-megamenu-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link,
 .p-megamenu .p-megamenu-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link:not(.p-disabled):hover {
@@ -4567,9 +4565,9 @@
   color: #6c757d;
 }
 .p-megamenu .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #df9eea;
+  color: #495057;
+  background: #dee2e6;
+  outline: none;
 }
 .p-megamenu .p-megamenu-panel {
   background: #ffffff;
@@ -4646,9 +4644,13 @@
   color: #6c757d;
 }
 .p-menu .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #df9eea;
+  color: #495057;
+  background: #dee2e6;
+  outline: none;
+}
+.p-menu .p-menuitem-link.p-focus {
+  color: #495057;
+  background: #dee2e6;
 }
 .p-menu.p-menu-overlay {
   background: #ffffff;
@@ -4706,9 +4708,9 @@
   color: #6c757d;
 }
 .p-menubar .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #df9eea;
+  color: #495057;
+  background: #dee2e6;
+  outline: none;
 }
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link {
   padding: 0.75rem 1rem;
@@ -4741,9 +4743,9 @@
   color: #6c757d;
 }
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #df9eea;
+  color: #495057;
+  background: #dee2e6;
+  outline: none;
 }
 .p-menubar .p-menubar-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link,
 .p-menubar .p-menubar-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link:not(.p-disabled):hover {
@@ -4856,9 +4858,9 @@
     color: #6c757d;
   }
   .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link:focus {
-    outline: 0 none;
-    outline-offset: 0;
-    box-shadow: inset 0 0 0 0.15rem #df9eea;
+    color: #495057;
+    background: #dee2e6;
+    outline: none;
   }
   .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link > .p-submenu-icon {
     margin-left: auto;
@@ -4988,9 +4990,9 @@
   color: #6c757d;
 }
 .p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #df9eea;
+  color: #495057;
+  background: #dee2e6;
+  outline: none;
 }
 .p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-link .p-panelmenu-icon {
   margin-right: 0.5rem;
@@ -5119,44 +5121,13 @@
   border-radius: 3px;
   width: 12.5rem;
 }
-.p-tieredmenu .p-menuitem-link {
-  padding: 0.75rem 1rem;
-  color: #495057;
-  border-radius: 0;
-  transition: box-shadow 0.2s;
-  user-select: none;
-}
-.p-tieredmenu .p-menuitem-link .p-menuitem-text {
-  color: #495057;
-}
-.p-tieredmenu .p-menuitem-link .p-menuitem-icon {
-  color: #6c757d;
-  margin-right: 0.5rem;
-}
-.p-tieredmenu .p-menuitem-link .p-submenu-icon {
-  color: #6c757d;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-disabled):hover {
-  background: #e9ecef;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-disabled):hover .p-menuitem-text {
-  color: #495057;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-disabled):hover .p-menuitem-icon {
-  color: #6c757d;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-disabled):hover .p-submenu-icon {
-  color: #6c757d;
-}
-.p-tieredmenu .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #df9eea;
-}
 .p-tieredmenu.p-tieredmenu-overlay {
   background: #ffffff;
   border: 0 none;
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
+}
+.p-tieredmenu .p-tieredmenu-root-submenu {
+  outline: 0 none;
 }
 .p-tieredmenu .p-submenu-list {
   padding: 0.25rem 0;
@@ -5164,13 +5135,69 @@
   border: 0 none;
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
 }
-.p-tieredmenu .p-menuitem.p-menuitem-active > .p-menuitem-link {
-  background: #e9ecef;
+.p-tieredmenu .p-menuitem .p-menuitem-content {
+  color: #495057;
+  transition: box-shadow 0.2s;
 }
-.p-tieredmenu .p-menuitem.p-menuitem-active > .p-menuitem-link .p-menuitem-text {
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link,
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action {
+  padding: 0.75rem 1rem;
+  border-radius: 0;
+  user-select: none;
+}
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action .p-menuitem-text {
   color: #495057;
 }
-.p-tieredmenu .p-menuitem.p-menuitem-active > .p-menuitem-link .p-menuitem-icon, .p-tieredmenu .p-menuitem.p-menuitem-active > .p-menuitem-link .p-submenu-icon {
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link .p-menuitem-icon,
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action .p-menuitem-icon {
+  color: #6c757d;
+  margin-right: 0.5rem;
+}
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action .p-submenu-icon {
+  color: #6c757d;
+}
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content {
+  color: #495057;
+  background: #e9ecef;
+}
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-action .p-menuitem-text {
+  color: #495057;
+}
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-link .p-menuitem-icon, .p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-action .p-menuitem-icon,
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-action .p-submenu-icon {
+  color: #6c757d;
+}
+.p-tieredmenu .p-menuitem.p-highlight.p-focus > .p-menuitem-content {
+  background: #e9ecef;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content {
+  color: #495057;
+  background: #dee2e6;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-action .p-menuitem-text {
+  color: #495057;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-menuitem-icon, .p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-action .p-menuitem-icon,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-action .p-submenu-icon {
+  color: #495057;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content {
+  color: #495057;
+  background: #e9ecef;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-action .p-menuitem-text {
+  color: #495057;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-link .p-menuitem-icon, .p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-action .p-menuitem-icon,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-action .p-submenu-icon {
   color: #6c757d;
 }
 .p-tieredmenu .p-menu-separator {
