--- a/public/themes/tailwind-light/theme.css
+++ b/public/themes/tailwind-light/theme.css
@@ -1699,6 +1699,12 @@
 .p-togglebutton.p-button .p-button-icon-right {
   color: #71717A;
 }
+.p-togglebutton.p-button:not(.p-disabled).p-focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: 0 0 0 1px #6366F1;
+  border-color: #4F46E5;
+}
 .p-togglebutton.p-button:not(.p-disabled):not(.p-highlight):hover {
   background: #f4f4f5;
   border-color: #d4d4d8;
@@ -4418,9 +4424,9 @@
   color: #71717A;
 }
 .p-contextmenu .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #6366F1;
+  color: #18181B;
+  background: #e5e7eb;
+  outline: none;
 }
 .p-contextmenu .p-submenu-list {
   padding: 0.25rem 0;
@@ -4452,20 +4458,12 @@
   padding: 0.5rem 0.5rem;
   border-radius: 0.5rem;
 }
-.p-dock .p-dock-list-container .p-dock-list {
-  outline: none;
-}
 .p-dock .p-dock-item {
   padding: 0.5rem;
 }
 .p-dock .p-dock-action {
   width: 4rem;
   height: 4rem;
-}
-.p-dock .p-dock-action.p-focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #6366F1;
 }
 .p-dock.p-dock-top .p-dock-item-second-prev,
 .p-dock.p-dock-top .p-dock-item-second-next, .p-dock.p-dock-bottom .p-dock-item-second-prev,
@@ -4552,9 +4550,9 @@
   color: #71717A;
 }
 .p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #6366F1;
+  color: #18181B;
+  background: #e5e7eb;
+  outline: none;
 }
 .p-megamenu .p-megamenu-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link,
 .p-megamenu .p-megamenu-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link:not(.p-disabled):hover {
@@ -4602,9 +4600,9 @@
   color: #71717A;
 }
 .p-megamenu .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #6366F1;
+  color: #18181B;
+  background: #e5e7eb;
+  outline: none;
 }
 .p-megamenu .p-megamenu-panel {
   background: #ffffff;
@@ -4681,9 +4679,13 @@
   color: #71717A;
 }
 .p-menu .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #6366F1;
+  color: #18181B;
+  background: #e5e7eb;
+  outline: none;
+}
+.p-menu .p-menuitem-link.p-focus {
+  color: #18181B;
+  background: #e5e7eb;
 }
 .p-menu.p-menu-overlay {
   background: #ffffff;
@@ -4741,9 +4743,9 @@
   color: #71717A;
 }
 .p-menubar .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #6366F1;
+  color: #18181B;
+  background: #e5e7eb;
+  outline: none;
 }
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link {
   padding: 0.75rem 1rem;
@@ -4776,9 +4778,9 @@
   color: #71717A;
 }
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #6366F1;
+  color: #18181B;
+  background: #e5e7eb;
+  outline: none;
 }
 .p-menubar .p-menubar-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link,
 .p-menubar .p-menubar-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link:not(.p-disabled):hover {
@@ -4891,9 +4893,9 @@
     color: #71717A;
   }
   .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link:focus {
-    outline: 0 none;
-    outline-offset: 0;
-    box-shadow: inset 0 0 0 0.15rem #6366F1;
+    color: #18181B;
+    background: #e5e7eb;
+    outline: none;
   }
   .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link > .p-submenu-icon {
     margin-left: auto;
@@ -5023,9 +5025,9 @@
   color: #71717A;
 }
 .p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #6366F1;
+  color: #18181B;
+  background: #e5e7eb;
+  outline: none;
 }
 .p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-link .p-panelmenu-icon {
   margin-right: 0.5rem;
@@ -5154,44 +5156,13 @@
   border-radius: 0.375rem;
   width: 12.5rem;
 }
-.p-tieredmenu .p-menuitem-link {
-  padding: 0.75rem 1rem;
-  color: #3f3f46;
-  border-radius: 0;
-  transition: none;
-  user-select: none;
-}
-.p-tieredmenu .p-menuitem-link .p-menuitem-text {
-  color: #3f3f46;
-}
-.p-tieredmenu .p-menuitem-link .p-menuitem-icon {
-  color: #71717A;
-  margin-right: 0.5rem;
-}
-.p-tieredmenu .p-menuitem-link .p-submenu-icon {
-  color: #71717A;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-disabled):hover {
-  background: #f4f4f5;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-disabled):hover .p-menuitem-text {
-  color: #18181B;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-disabled):hover .p-menuitem-icon {
-  color: #71717A;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-disabled):hover .p-submenu-icon {
-  color: #71717A;
-}
-.p-tieredmenu .p-menuitem-link:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #6366F1;
-}
 .p-tieredmenu.p-tieredmenu-overlay {
   background: #ffffff;
   border: 0 none;
   box-shadow: 0 0 #0000, 0 0 #0000, 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+.p-tieredmenu .p-tieredmenu-root-submenu {
+  outline: 0 none;
 }
 .p-tieredmenu .p-submenu-list {
   padding: 0.25rem 0;
@@ -5199,13 +5170,69 @@
   border: 0 none;
   box-shadow: 0 0 #0000, 0 0 #0000, 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
-.p-tieredmenu .p-menuitem.p-menuitem-active > .p-menuitem-link {
-  background: #f4f4f5;
+.p-tieredmenu .p-menuitem .p-menuitem-content {
+  color: #3f3f46;
+  transition: none;
 }
-.p-tieredmenu .p-menuitem.p-menuitem-active > .p-menuitem-link .p-menuitem-text {
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link,
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action {
+  padding: 0.75rem 1rem;
+  border-radius: 0;
+  user-select: none;
+}
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action .p-menuitem-text {
   color: #3f3f46;
 }
-.p-tieredmenu .p-menuitem.p-menuitem-active > .p-menuitem-link .p-menuitem-icon, .p-tieredmenu .p-menuitem.p-menuitem-active > .p-menuitem-link .p-submenu-icon {
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link .p-menuitem-icon,
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action .p-menuitem-icon {
+  color: #71717A;
+  margin-right: 0.5rem;
+}
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action .p-submenu-icon {
+  color: #71717A;
+}
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content {
+  color: #3f3f46;
+  background: #f4f4f5;
+}
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-action .p-menuitem-text {
+  color: #3f3f46;
+}
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-link .p-menuitem-icon, .p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-action .p-menuitem-icon,
+.p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-action .p-submenu-icon {
+  color: #71717A;
+}
+.p-tieredmenu .p-menuitem.p-highlight.p-focus > .p-menuitem-content {
+  background: #f4f4f5;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content {
+  color: #18181B;
+  background: #e5e7eb;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-action .p-menuitem-text {
+  color: #18181B;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-menuitem-icon, .p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-action .p-menuitem-icon,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-action .p-submenu-icon {
+  color: #18181B;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content {
+  color: #18181B;
+  background: #f4f4f5;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-action .p-menuitem-text {
+  color: #18181B;
+}
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-link .p-menuitem-icon, .p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-action .p-menuitem-icon,
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled):hover > .p-menuitem-content .p-menuitem-action .p-submenu-icon {
   color: #71717A;
 }
 .p-tieredmenu .p-menu-separator {
